--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "batchwise"
 dynamic = ["version"]
 description = "Lightweight batch processing engine and feature store."
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 license = "MIT"
 keywords = []
 authors = [
@@ -19,14 +19,22 @@ classifiers = [
   "Natural Language :: English",
   "Operating System :: OS Independent",
   "Programming Language :: Python",
-  "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
   "Programming Language :: Python :: Implementation :: CPython",
 ]
-dependencies = []
+dependencies = [
+  "pandas>=1,<3",
+  "pyyaml~=6.0",
+  "pydantic~=2.3",
+  "pydantic-settings~=2.3",
+  "pyarrow>=11.0",
+  "pillow>=11.0",
+  "numpy>=1,<3",
+  "fsspec>=2022",
+]
 
 [project.optional-dependencies]
 test = [
@@ -48,6 +56,9 @@ full = [
 Documentation = "https://github.com/manuelkonrad/batchwise#readme"
 Issues = "https://github.com/manuelkonrad/batchwise/issues"
 Source = "https://github.com/manuelkonrad/batchwise"
+
+[project.scripts]
+batchwise = "batchwise.cli:cli"
 
 # ~~~~~ #
 # Hatch #
@@ -85,7 +96,7 @@ features = [
 ]
 
 [[tool.hatch.envs.hatch-test.matrix]]
-python = ["3.9", "3.10", "3.11", "3.12", "3.13"]
+python = ["3.10", "3.11", "3.12", "3.13"]
 
 [tool.hatch.envs.hatch-static-analysis]
 dependencies = []
@@ -176,11 +187,15 @@ files = [
 ]
 ignore_missing_imports = true
 
+[[tool.mypy.overrides]]
+module = ["yaml"]
+ignore_missing_imports = true
+
 # ~~~~~~ #
 # Bandit #
 # ~~~~~~ #
 
 [tool.bandit]
 exclude_dirs = [
-  "notebooks",
+  "scripts",
 ]
